...
                        await authCommand.createUserEvent(
                            name: nameController.text);
                      }
                    },
                  ),
                  ElevatedButton(
                    child: const Text('Sign in'),
                    onPressed: () async {
                      if (formKey.currentState!.validate()) {
                        await authRef.signInWithEmailAndPassword(
                          email: emailController.text,
                          password: passwordController.text,
                        );
...
